crates/aranya-policy-lang/tests/data/old_addition.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid operator
  |
2 |     return 3 + 4
  |              ^ found `+`
  |
help: you might have meant to use an arithmetic function
  |
2 -     return 3 + 4
2 +     return saturating_add(3, 4)
  |
2 -     return 3 + 4
2 +     return add(3, 4)
  |
